--- a/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
+++ b/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +98,7 @@
        "      <td>0.51</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>4.86</td>\n",
        "      <td>0.34</td>\n",
        "      <td>1.19</td>\n",
@@ -122,7 +122,7 @@
        "      <td>1.59</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>6.64</td>\n",
        "      <td>2.18</td>\n",
        "      <td>1.23</td>\n",
@@ -146,91 +146,37 @@
        "      <td>1.40</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>8.14</td>\n",
        "      <td>0.93</td>\n",
        "      <td>1.05</td>\n",
        "      <td>47.1</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Salis Abdul Samed</td>\n",
-       "      <td>GHA</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>Lens</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>6.60</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Laurent Abergel</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>Lorient</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>2.02</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.51</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>44.4</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 124 columns</p>\n",
+       "<p>3 rows × 124 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Rk             Player Nation   Pos         Squad            Comp  Age  \\\n",
-       "0   1   Brenden Aaronson    USA  MFFW  Leeds United  Premier League   22   \n",
-       "1   2   Yunis Abdelhamid    MAR    DF         Reims         Ligue 1   35   \n",
-       "2   3      Himad Abdelli    FRA  MFFW        Angers         Ligue 1   23   \n",
-       "3   4  Salis Abdul Samed    GHA    MF          Lens         Ligue 1   22   \n",
-       "4   5    Laurent Abergel    FRA    MF       Lorient         Ligue 1   30   \n",
+       "   Rk            Player Nation   Pos         Squad            Comp  Age  Born  \\\n",
+       "0   1  Brenden Aaronson    USA  MFFW  Leeds United  Premier League   22  2000   \n",
+       "1   2  Yunis Abdelhamid    MAR    DF         Reims         Ligue 1   35  1987   \n",
+       "2   3     Himad Abdelli    FRA  MFFW        Angers         Ligue 1   23  1999   \n",
        "\n",
-       "   Born  MP  Starts  ...   Off   Crs  TklW  PKwon  PKcon    OG  Recov  AerWon  \\\n",
-       "0  2000  20      19  ...  0.17  2.54  0.51    0.0    0.0  0.00   4.86    0.34   \n",
-       "1  1987  22      22  ...  0.05  0.18  1.59    0.0    0.0  0.00   6.64    2.18   \n",
-       "2  1999  14       8  ...  0.00  1.05  1.40    0.0    0.0  0.00   8.14    0.93   \n",
-       "3  2000  20      20  ...  0.00  0.35  0.80    0.0    0.0  0.05   6.60    0.50   \n",
-       "4  1993  15      15  ...  0.00  0.23  2.02    0.0    0.0  0.00   6.51    0.31   \n",
+       "   MP  Starts  ...   Off   Crs  TklW  PKwon  PKcon   OG  Recov  AerWon  \\\n",
+       "0  20      19  ...  0.17  2.54  0.51    0.0    0.0  0.0   4.86    0.34   \n",
+       "1  22      22  ...  0.05  0.18  1.59    0.0    0.0  0.0   6.64    2.18   \n",
+       "2  14       8  ...  0.00  1.05  1.40    0.0    0.0  0.0   8.14    0.93   \n",
        "\n",
        "   AerLost  AerWon%  \n",
        "0     1.19     22.2  \n",
        "1     1.23     64.0  \n",
        "2     1.05     47.1  \n",
-       "3     0.50     50.0  \n",
-       "4     0.39     44.4  \n",
        "\n",
-       "[5 rows x 124 columns]"
+       "[3 rows x 124 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -238,7 +184,7 @@
    "source": [
     "soccer = pd.read_csv(\"/Users/pstern/Desktop/INDE-577/Datasets/soccer_stats.csv\", \n",
     "                     encoding='ISO-8859-1', delimiter=';')\n",
-    "soccer.head()"
+    "soccer.head(3)"
    ]
   }
  ],
