--- a/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
+++ b/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
@@ -107,7 +107,7 @@
     "y = [x[i]**3 for i in range(len(x))]\n",
     "z = [x[i]**2 for i in range(len(x))]\n",
     "\n",
-    "#Adjust the axis labels\n",
+    "#Adjust the axis labels.\n",
     "plt.xlabel('Value of x')\n",
     "plt.ylabel('Value of f(x)')\n",
     "\n",
@@ -115,11 +115,12 @@
     "plt.plot(x,y, label = \"f(x) = x^3\", color = \"green\")\n",
     "plt.plot(x,z, label = \"f(x) = x^2\", color = \"red\")\n",
     "\n",
-    "#Add a title, a grid, and a legend\n",
+    "#Add a title, a grid, and a legend.\n",
     "plt.legend()\n",
     "plt.title(\"Plot of x vs. f(x)\")\n",
     "plt.grid()\n",
     "\n",
+    "#Show the plot.\n",
     "plt.show()"
    ]
   },
@@ -221,7 +222,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.0"
   },
   "orig_nbformat": 4,
   "vscode": {
