--- a/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
+++ b/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
@@ -4,14 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "***\n",
     "# Python Practice using NumPy, MatPlotLib, and Pandas\n",
     "\n",
-    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library."
+    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library.\n",
+    "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +224,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.5"
   },
   "orig_nbformat": 4,
   "vscode": {
