--- a/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
+++ b/In-Class/NumPy, Pandas, and Plotting Practice.ipynb
@@ -4,11 +4,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***\n",
     "# Python Practice using NumPy, MatPlotLib, and Pandas\n",
     "\n",
-    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library.\n",
-    "***"
+    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library."
    ]
   },
   {
