--- a/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
+++ b/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "## Data Visualization on Soccer Data\n",
     "\n",
-    "In this file, I use 2022-2023 soccer statistics to perform data visualization. I begin by reading in the data. Then, I make predictions based on the data. You can find the dataset [2022-2023 Football Player Stats Dataset](https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats?resource=download)\n"
+    "In this file, I use 2022-2023 soccer statistics to perform data visualization. I begin by reading in the data. Then, I make predictions based on the data. You can find the dataset [2022-2023 Football Player Stats Dataset](https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats?resource=download)"
    ]
   },
   {
