--- a/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
+++ b/Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
@@ -6,7 +6,23 @@
    "source": [
     "## Data Visualization on Soccer Data\n",
     "\n",
-    "In this file, I use 2022-2023 soccer statistics to perform data visualization. I begin by reading in the data. Then, I make predictions based on the data. You can find the dataset [2022-2023 Football Player Stats Dataset](https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats?resource=download)"
+    "In this file, I use 2022-2023 soccer statistics to perform data visualization. I begin by reading in the data. Then, I make predictions based on the data. You can find the dataset [2022-2023 Football Player Stats Dataset](https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats?resource=download).\n",
+    "\n",
+    "The following packages are required to run the attached code:\n",
+    "\n",
+    "- [Plotly](https://plotly.com/python/)\n",
+    "\n",
+    "- [Pandas Datareader](https://pandas-datareader.readthedocs.io/en/latest/)\n",
+    "\n",
+    "- [Plotly Express](https://plotly.com/python/plotly-express/)\n",
+    "\n",
+    "- [Pandas](https://pandas.pydata.org/docs/)\n",
+    "\n",
+    "- [Matplotlib.pylab](https://matplotlib.org/2.0.2/api/pyplot_api.html)\n",
+    "\n",
+    "- [Numpy](https://numpy.org/doc/)\n",
+    "\n",
+    "- [Datetime](https://docs.python.org/3/library/datetime.html)\n"
    ]
   },
   {
@@ -31,8 +47,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Read in the data and check its format.\n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +201,7 @@
        "[3 rows x 124 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
