--- a/0. In-Class and Python Practice/NumPy, Pandas, and Plotting Practice.ipynb
+++ b/0. In-Class and Python Practice/NumPy, Pandas, and Plotting Practice.ipynb
@@ -6,7 +6,17 @@
    "source": [
     "# Python Practice using NumPy, MatPlotLib, and Pandas\n",
     "\n",
-    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library."
+    "This Jupyter Notebook is dedicated to practicing Python programming with the help of the NumPy library, the Pandas library, and the Matplotlib library.\n",
+    "\n",
+    "The following packages are required to run the attached code:\n",
+    "\n",
+    "- [Pandas](https://pandas.pydata.org/docs/)\n",
+    "\n",
+    "- [Matplotlib.pylab](https://matplotlib.org/2.0.2/api/pyplot_api.html)\n",
+    "\n",
+    "- [Numpy](https://numpy.org/doc/)\n",
+    "\n",
+    "- [Seaborn](https://seaborn.pydata.org/)"
    ]
   },
   {
@@ -38,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +178,6 @@
    "source": [
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
     "import seaborn as sns\n",
     "\n",
     "#Read in the file. This will be a data frame.\n",
@@ -222,7 +231,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.0.0"
+   "version": "3.1.0"
   },
   "orig_nbformat": 4,
   "vscode": {
