--- a/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
+++ b/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD PERCEPTRON EXPLANATAION"
+    "## Setting Up:"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "ADD PERCEPTRON EXPLANATION"
+    "***\n",
+    "Get the predictors (Goals, Assists, Passes into the box, and offsides penalties) as well as what we are predicting (Offense or Defense).\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 177,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter the data such that we are only including players who have player more than 15 games worth of time.\n",
+    "data = soccer[soccer['90s'] >= 15.0]\n",
+    "\n",
+    "# Just use the first 100 data points.\n",
+    "data = data[:100]\n",
+    "\n",
+    "# For simplification, we will only use a few predictors.\n",
+    "predictors = data[['Goals', 'Assists', 'PPA', 'PasOff']]\n",
+    "\n",
+    "# Now do the same for the position.\n",
+    "y = data[['Pos']]\n",
+    "\n",
+    "# Convert each to a numpy array.\n",
+    "y = y.values\n",
+    "X = predictors.values"
    ]
   },
   {
@@ -66,379 +91,186 @@
    "metadata": {},
    "source": [
     "***\n",
-    "ee\n",
+    "The perceptron algorithm performs binary classification, so we need to make position binary.\n",
     "***"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 178,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert position into a binary variable where -1 is an attacker and 1 is a defender.\n",
+    "# I considered forwards, forward/defenders, and forward/midfielders as attackers.\n",
+    "y = np.where((y == 'FW') | (y == 'FWDF') | (y == 'FWMF') | (y == 'MFFW'), -1, 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Because the players played different amounts of time, we should also normalize the data.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Get the number of 90s played.\n",
+    "ninetys = data['90s'].values\n",
+    "\n",
+    "# Divide each row by the number of 90s played to normalize.\n",
+    "for i in range(X.shape[1]):\n",
+    "    if ninetys[i] != 0:\n",
+    "        X[:, i] = X[:, i] / ninetys[i]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Implementing the Algorithm:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Implement a perceptron class that, for each epoch, makes predictions and calculates the number of errors.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Perceptron(object):\n",
+    "    # Initialize Perceptron object.\n",
+    "    def __init__(self, eta = .5, epochs=50):\n",
+    "        self.eta = eta\n",
+    "        self.epochs = epochs\n",
+    "        \n",
+    "    def train(self, X, y):\n",
+    "        # Initialize random weights.\n",
+    "        self.weight = np.random.rand(1 + X.shape[1])\n",
+    "        self.errors_ = []\n",
+    "        \n",
+    "        # Iterate through the epochs.\n",
+    "        for _ in range(self.epochs):\n",
+    "            errors = 0\n",
+    "\n",
+    "            # Iterate through each sample in the training set.\n",
+    "            for xi, target in zip(X, y):\n",
+    "\n",
+    "                # Update weights based on the difference between predicted and actual class.\n",
+    "                update = self.eta * (self.predict(xi) - target)\n",
+    "                self.weight[:-1] -= update * xi\n",
+    "                self.weight[-1] -= update\n",
+    "\n",
+    "                #Keep track of the number of errors.\n",
+    "                errors += int(update != 0)\n",
+    "\n",
+    "            # If there are no errors in this epoch, return.\n",
+    "            if errors == 0:\n",
+    "                return self\n",
+    "            else:\n",
+    "                self.errors_.append(errors)\n",
+    "            \n",
+    "        return self\n",
+    "    \n",
+    "    def net_input(self, X):\n",
+    "        # Calculate net input (sum of weighted inputs plus bias).\n",
+    "        return np.dot(X, self.weight[:-1]) + self.weight[-1]\n",
+    "    \n",
+    "    def predict(self, X):\n",
+    "        # Predict class labels based on net input.\n",
+    "        return np.where(self.net_input(X) >= 0.0, 1, -1)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Applying the Algorithm:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Create an instance of the class to train the model.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 181,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Rk</th>\n",
-       "      <th>Player</th>\n",
-       "      <th>Nation</th>\n",
-       "      <th>Pos</th>\n",
-       "      <th>Squad</th>\n",
-       "      <th>Comp</th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Born</th>\n",
-       "      <th>MP</th>\n",
-       "      <th>Starts</th>\n",
-       "      <th>...</th>\n",
-       "      <th>Off</th>\n",
-       "      <th>Crs</th>\n",
-       "      <th>TklW</th>\n",
-       "      <th>PKwon</th>\n",
-       "      <th>PKcon</th>\n",
-       "      <th>OG</th>\n",
-       "      <th>Recov</th>\n",
-       "      <th>AerWon</th>\n",
-       "      <th>AerLost</th>\n",
-       "      <th>AerWon%</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Brenden Aaronson</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>MFFW</td>\n",
-       "      <td>Leeds United</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>20</td>\n",
-       "      <td>19</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.17</td>\n",
-       "      <td>2.54</td>\n",
-       "      <td>0.51</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4.86</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>1.19</td>\n",
-       "      <td>22.2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>Yunis Abdelhamid</td>\n",
-       "      <td>MAR</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>Reims</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>35</td>\n",
-       "      <td>1987</td>\n",
-       "      <td>22</td>\n",
-       "      <td>22</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>1.59</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.64</td>\n",
-       "      <td>2.18</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>64.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>Himad Abdelli</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>MFFW</td>\n",
-       "      <td>Angers</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>14</td>\n",
-       "      <td>8</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>8.14</td>\n",
-       "      <td>0.93</td>\n",
-       "      <td>1.05</td>\n",
-       "      <td>47.1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>4</td>\n",
-       "      <td>Salis Abdul Samed</td>\n",
-       "      <td>GHA</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>Lens</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>22</td>\n",
-       "      <td>2000</td>\n",
-       "      <td>20</td>\n",
-       "      <td>20</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.35</td>\n",
-       "      <td>0.80</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.05</td>\n",
-       "      <td>6.60</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>0.50</td>\n",
-       "      <td>50.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>Laurent Abergel</td>\n",
-       "      <td>FRA</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>Lorient</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>30</td>\n",
-       "      <td>1993</td>\n",
-       "      <td>15</td>\n",
-       "      <td>15</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>2.02</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>6.51</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>0.39</td>\n",
-       "      <td>44.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>95</th>\n",
-       "      <td>96</td>\n",
-       "      <td>Komnen Andri?</td>\n",
-       "      <td>SRB</td>\n",
-       "      <td>FW</td>\n",
-       "      <td>Clermont Foot</td>\n",
-       "      <td>Ligue 1</td>\n",
-       "      <td>27</td>\n",
-       "      <td>1995</td>\n",
-       "      <td>23</td>\n",
-       "      <td>15</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.43</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.29</td>\n",
-       "      <td>0.07</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2.52</td>\n",
-       "      <td>2.95</td>\n",
-       "      <td>3.38</td>\n",
-       "      <td>46.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>96</th>\n",
-       "      <td>97</td>\n",
-       "      <td>Robert Andrich</td>\n",
-       "      <td>GER</td>\n",
-       "      <td>MF</td>\n",
-       "      <td>Leverkusen</td>\n",
-       "      <td>Bundesliga</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>18</td>\n",
-       "      <td>17</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.19</td>\n",
-       "      <td>1.59</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.06</td>\n",
-       "      <td>5.48</td>\n",
-       "      <td>1.40</td>\n",
-       "      <td>1.27</td>\n",
-       "      <td>52.4</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>98</td>\n",
-       "      <td>Angeliño</td>\n",
-       "      <td>ESP</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>Hoffenheim</td>\n",
-       "      <td>Bundesliga</td>\n",
-       "      <td>26</td>\n",
-       "      <td>1997</td>\n",
-       "      <td>19</td>\n",
-       "      <td>18</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.28</td>\n",
-       "      <td>6.67</td>\n",
-       "      <td>0.45</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>4.97</td>\n",
-       "      <td>0.40</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>31.8</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>98</th>\n",
-       "      <td>99</td>\n",
-       "      <td>Fabrizio Angileri</td>\n",
-       "      <td>ARG</td>\n",
-       "      <td>DF</td>\n",
-       "      <td>Getafe</td>\n",
-       "      <td>La Liga</td>\n",
-       "      <td>28</td>\n",
-       "      <td>1994</td>\n",
-       "      <td>8</td>\n",
-       "      <td>7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>1.58</td>\n",
-       "      <td>0.88</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.18</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>2.81</td>\n",
-       "      <td>2.46</td>\n",
-       "      <td>1.23</td>\n",
-       "      <td>66.7</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>99</th>\n",
-       "      <td>100</td>\n",
-       "      <td>Jaidon Anthony</td>\n",
-       "      <td>ENG</td>\n",
-       "      <td>MFFW</td>\n",
-       "      <td>Bournemouth</td>\n",
-       "      <td>Premier League</td>\n",
-       "      <td>23</td>\n",
-       "      <td>1999</td>\n",
-       "      <td>17</td>\n",
-       "      <td>7</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.34</td>\n",
-       "      <td>3.56</td>\n",
-       "      <td>1.49</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>5.17</td>\n",
-       "      <td>0.92</td>\n",
-       "      <td>1.03</td>\n",
-       "      <td>47.1</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>100 rows × 124 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "     Rk             Player Nation   Pos          Squad            Comp  Age  \\\n",
-       "0     1   Brenden Aaronson    USA  MFFW   Leeds United  Premier League   22   \n",
-       "1     2   Yunis Abdelhamid    MAR    DF          Reims         Ligue 1   35   \n",
-       "2     3      Himad Abdelli    FRA  MFFW         Angers         Ligue 1   23   \n",
-       "3     4  Salis Abdul Samed    GHA    MF           Lens         Ligue 1   22   \n",
-       "4     5    Laurent Abergel    FRA    MF        Lorient         Ligue 1   30   \n",
-       "..  ...                ...    ...   ...            ...             ...  ...   \n",
-       "95   96      Komnen Andri?    SRB    FW  Clermont Foot         Ligue 1   27   \n",
-       "96   97     Robert Andrich    GER    MF     Leverkusen      Bundesliga   28   \n",
-       "97   98           Angeliño    ESP    DF     Hoffenheim      Bundesliga   26   \n",
-       "98   99  Fabrizio Angileri    ARG    DF         Getafe         La Liga   28   \n",
-       "99  100     Jaidon Anthony    ENG  MFFW    Bournemouth  Premier League   23   \n",
-       "\n",
-       "    Born  MP  Starts  ...   Off   Crs  TklW  PKwon  PKcon    OG  Recov  \\\n",
-       "0   2000  20      19  ...  0.17  2.54  0.51   0.00   0.00  0.00   4.86   \n",
-       "1   1987  22      22  ...  0.05  0.18  1.59   0.00   0.00  0.00   6.64   \n",
-       "2   1999  14       8  ...  0.00  1.05  1.40   0.00   0.00  0.00   8.14   \n",
-       "3   2000  20      20  ...  0.00  0.35  0.80   0.00   0.00  0.05   6.60   \n",
-       "4   1993  15      15  ...  0.00  0.23  2.02   0.00   0.00  0.00   6.51   \n",
-       "..   ...  ..     ...  ...   ...   ...   ...    ...    ...   ...    ...   \n",
-       "95  1995  23      15  ...  0.43  0.07  0.29   0.07   0.00  0.00   2.52   \n",
-       "96  1994  18      17  ...  0.00  0.19  1.59   0.00   0.00  0.06   5.48   \n",
-       "97  1997  19      18  ...  0.28  6.67  0.45   0.00   0.00  0.00   4.97   \n",
-       "98  1994   8       7  ...  0.00  1.58  0.88   0.00   0.18  0.00   2.81   \n",
-       "99  1999  17       7  ...  0.34  3.56  1.49   0.00   0.00  0.00   5.17   \n",
-       "\n",
-       "    AerWon  AerLost  AerWon%  \n",
-       "0     0.34     1.19     22.2  \n",
-       "1     2.18     1.23     64.0  \n",
-       "2     0.93     1.05     47.1  \n",
-       "3     0.50     0.50     50.0  \n",
-       "4     0.31     0.39     44.4  \n",
-       "..     ...      ...      ...  \n",
-       "95    2.95     3.38     46.6  \n",
-       "96    1.40     1.27     52.4  \n",
-       "97    0.40     0.85     31.8  \n",
-       "98    2.46     1.23     66.7  \n",
-       "99    0.92     1.03     47.1  \n",
-       "\n",
-       "[100 rows x 124 columns]"
+       "<__main__.Perceptron at 0x13360cd50>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 181,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "soccer.iloc[:100]"
+    "# Instantiate an instance of the Perceptron class.\n",
+    "ptron = Perceptron(epochs = 1000)\n",
+    "\n",
+    "# Train the model.\n",
+    "ptron.train(X, y)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Make predictions.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 183,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.86"
+      ]
+     },
+     "execution_count": 183,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Predict make predictions based on training.\n",
+    "y_hat = ptron.predict(X)\n",
+    "\n",
+    "# Compare our predictions with reality.\n",
+    "sum = 0\n",
+    "for i in range(len(y_hat)):\n",
+    "    if y_hat[i] == y[i][0]:\n",
+    "        sum += 1\n",
+    "\n",
+    "sum"
    ]
   }
  ],
