--- a/1. Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
+++ b/1. Supervised Learning/Data Visualization/Modeling and Predictions.ipynb
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
        "[3 rows x 124 columns]"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,9 +225,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Goals variable  value\n",
+      "0          1    Shots   1.53\n",
+      "1          0    Shots   0.86\n",
+      "2          0    Shots   1.05\n",
+      "3          1    Shots   0.60\n",
+      "4          0    Shots   0.31\n",
+      "...      ...      ...    ...\n",
+      "10751      0  Assists   2.50\n",
+      "10752      0  Assists   0.00\n",
+      "10753      8  Assists   0.27\n",
+      "10754      1  Assists   0.00\n",
+      "10755      2  Assists   0.00\n",
+      "\n",
+      "[10756 rows x 3 columns]\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.plotly.v1+json": {
