--- a/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
+++ b/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,18 +65,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Filter the data such that we are only including players who have player more than 15 games worth of time.\n",
     "data = soccer[soccer['90s'] >= 15.0]\n",
     "\n",
-    "# Just use the first 100 data points.\n",
-    "data = data[:100]\n",
+    "# Just use the first 250 data points.\n",
+    "data = data[:250]\n",
     "\n",
     "# For simplification, we will only use a few predictors.\n",
-    "predictors = data[['Goals', 'Assists', 'PPA', 'PasOff']]\n",
+    "predictors = data[['Goals', 'Assists', 'PPA', 'Off', 'ToAtt']]\n",
     "\n",
     "# Now do the same for the position.\n",
     "y = data[['Pos']]\n",
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,23 +213,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<__main__.Perceptron at 0x13360cd50>"
+       "<__main__.Perceptron at 0x134bdd4d0>"
       ]
      },
-     "execution_count": 181,
+     "execution_count": 257,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Instantiate an instance of the Perceptron class.\n",
-    "ptron = Perceptron(epochs = 1000)\n",
+    "ptron = Perceptron(epochs = 500)\n",
     "\n",
     "# Train the model.\n",
     "ptron.train(X, y)"
@@ -246,16 +246,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 258,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.86"
+       "0.812"
       ]
      },
-     "execution_count": 183,
+     "execution_count": 258,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,51 @@
     "    if y_hat[i] == y[i][0]:\n",
     "        sum += 1\n",
     "\n",
-    "sum"
+    "sum / len(y_hat)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Analyze the results. \n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The perceptron model made the correct prediction 90% of the time at "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 262,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'mlxtend'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[262], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mmlxtend\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mplotting\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m plot_decision_regions\n\u001b[1;32m      3\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m8\u001b[39m))\n\u001b[1;32m      4\u001b[0m plot_decision_regions(X, y, clf \u001b[38;5;241m=\u001b[39m ptron)\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'mlxtend'"
+     ]
+    }
+   ],
+   "source": [
+    "from mlxtend.plotting import plot_decision_regions\n",
+    "\n",
+    "plt.figure(figsize = (10, 8))\n",
+    "plot_decision_regions(X, y, clf = ptron)\n",
+    "plt.title(\"My First Perceptron\", fontsize = 18)\n",
+    "plt.xlabel(\"sepal length [cm]\", fontsize = 15)\n",
+    "plt.ylabel(\"petal length [cm]\", fontsize = 15)\n",
+    "plt.show()"
    ]
   }
  ],
