--- a/1. Supervised Learning/1.2. Gradient Descent/gradient_descent_linear_regression.ipynb
+++ b/1. Supervised Learning/1.2. Gradient Descent/gradient_descent_linear_regression.ipynb
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## The Process:"
+    "## The Algorithm:"
    ]
   },
   {
@@ -64,6 +64,8 @@
     "3. Select a step size / learning rate: This is the distance we want to move (after being multiplied by the gradient) at each iteration. A larger step size will have a more drastic move while smaller ones will take a more precise step towards the local minimum. Different functions will have different \"best\" step sizes, we can make predictions based on the functions, but oftentimes, experimenting with the data will get you to a good result.\n",
     "\n",
     "4. Select a stop condition: Over infinitely many iterations, gradient descent will get you exactly to the local minimum, but as the gradient gets closer and closer to 0, we may want to introduce a stopping condition so our code doesn't run forever. This can look like a number of iterations to do descent or a threshold for the gradient or the change in the cost function at each iteration. \n",
+    "\n",
+    "5. Repeat 2-4 taking the initial starting point to now be the previous point - the gradient * step size.\n",
     "***"
    ]
   },
@@ -104,14 +106,89 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "***\n",
+    "Perform gradient descent on x^4 -3x^3 + 2x^2. Note that this function has local minima at x = 0 and x = 1.64.\n",
+    "***"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 59,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6405275076253054"
+      ]
+     },
+     "execution_count": 59,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def f(x):\n",
+    "    return x**4  - 3 * x**3 + 2 * x**2\n",
+    "\n",
+    "def f_prime(x):\n",
+    "    return 4 * x**3 - 9 * x**2 + 4 * x\n",
+    "\n",
+    "def g_descent(f_prime, alpha = 0.8, w_0 = 5.0, max_iter = 1000):\n",
+    "    W = [w_0]\n",
+    "    i = 0\n",
+    "    while abs(f_prime(W[-1])) > 0.001 and i < max_iter:\n",
+    "        w_new = W[-1] - alpha*f_prime(W[-1])\n",
+    "        W.append(w_new)\n",
+    "        i += 1\n",
+    "    W = np.array(W)\n",
+    "    return W[-1]\n",
+    "\n",
+    "l_min = g_descent(f_prime, 0.01)\n",
+    "l_min"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Note that starting with different initial values can, in fact, change the local minimum found.\n",
+    "***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Local minimum at x = -0.0 for x_0 = -2\n",
+      "Local minimum at x = 1.64 for x_0 = 1\n",
+      "Local minimum at x = 1.64 for x_0 = 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set x values.\n",
+    "x1 = -2\n",
+    "x2 = 1\n",
+    "x3 = 3\n",
+    "\n",
+    "# Perform gradient descent at the different initial values. \n",
+    "g1 = g_descent(f_prime, 0.01, x1)\n",
+    "g2 = g_descent(f_prime, 0.01, x2)\n",
+    "g3 = g_descent(f_prime, 0.01, x3)\n",
+    "\n",
+    "# Print the resulting minima.\n",
+    "print(f'Local minimum at x = {round(g1,2)} for x_0 = {x1}')\n",
+    "print(f'Local minimum at x = {round(g2,2)} for x_0 = {x2}')\n",
+    "print(f'Local minimum at x = {round(g3,2)} for x_0 = {x3}')"
+   ]
   },
   {
    "cell_type": "markdown",
