--- a/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
+++ b/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
@@ -219,7 +219,7 @@
     {
      "data": {
       "text/plain": [
-       "<__main__.Perceptron at 0x1330059d0>"
+       "<__main__.Perceptron at 0x129a90d10>"
       ]
      },
      "execution_count": 6,
@@ -252,7 +252,7 @@
     {
      "data": {
       "text/plain": [
-       "0.58"
+       "0.74"
       ]
      },
      "execution_count": 7,
@@ -291,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +357,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.1.0"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
