--- a/1. Supervised Learning/1.2. Gradient Descent/linear_regression.ipynb
+++ b/1. Supervised Learning/1.2. Gradient Descent/linear_regression.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Gradient Descent\n",
+    "# Linear Regression\n",
     "\n",
     "This Jupyter Notebook is dedicated to understanding and implementing the linear regression on a single neuron for soccer data. You can find the dataset [2022-2023 Soccer Player Stats Dataset](https://www.kaggle.com/datasets/vivovinco/20222023-football-player-stats?resource=download).\n",
     "\n",
@@ -16,7 +16,9 @@
     "\n",
     "- [Numpy](https://numpy.org/doc/)\n",
     "\n",
-    "- [Seaborn](https://seaborn.pydata.org/)"
+    "- [Seaborn](https://seaborn.pydata.org/)\n",
+    "\n",
+    "- [Pandas](https://pandas.pydata.org/docs/)"
    ]
   },
   {
@@ -677,7 +679,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.1.0"
   }
  },
  "nbformat": 4,
