--- a/1. Supervised Learning/1.3. Logistic Regression/logistic_regression.ipynb
+++ b/1. Supervised Learning/1.3. Logistic Regression/logistic_regression.ipynb
@@ -56,50 +56,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 109,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting mlxtend\n",
-      "  Obtaining dependency information for mlxtend from https://files.pythonhosted.org/packages/1c/07/512f6a780239ad6ce06ce2aa7b4067583f5ddcfc7703a964a082c706a070/mlxtend-0.23.1-py3-none-any.whl.metadata\n",
-      "  Downloading mlxtend-0.23.1-py3-none-any.whl.metadata (7.3 kB)\n",
-      "Requirement already satisfied: scipy>=1.2.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (1.11.1)\n",
-      "Requirement already satisfied: numpy>=1.16.2 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (1.24.3)\n",
-      "Requirement already satisfied: pandas>=0.24.2 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (2.1.4)\n",
-      "Requirement already satisfied: scikit-learn>=1.0.2 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (1.3.0)\n",
-      "Requirement already satisfied: matplotlib>=3.0.0 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (3.7.2)\n",
-      "Requirement already satisfied: joblib>=0.13.2 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from mlxtend) (1.2.0)\n",
-      "Requirement already satisfied: contourpy>=1.0.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (1.0.5)\n",
-      "Requirement already satisfied: cycler>=0.10 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (0.11.0)\n",
-      "Requirement already satisfied: fonttools>=4.22.0 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (4.25.0)\n",
-      "Requirement already satisfied: kiwisolver>=1.0.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (1.4.4)\n",
-      "Requirement already satisfied: packaging>=20.0 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (23.1)\n",
-      "Requirement already satisfied: pillow>=6.2.0 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (10.0.1)\n",
-      "Requirement already satisfied: pyparsing<3.1,>=2.3.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (3.0.9)\n",
-      "Requirement already satisfied: python-dateutil>=2.7 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from matplotlib>=3.0.0->mlxtend) (2.8.2)\n",
-      "Requirement already satisfied: pytz>=2020.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from pandas>=0.24.2->mlxtend) (2023.3.post1)\n",
-      "Requirement already satisfied: tzdata>=2022.1 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from pandas>=0.24.2->mlxtend) (2023.3)\n",
-      "Requirement already satisfied: threadpoolctl>=2.0.0 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from scikit-learn>=1.0.2->mlxtend) (2.2.0)\n",
-      "Requirement already satisfied: six>=1.5 in /Users/pstern/anaconda3/lib/python3.11/site-packages (from python-dateutil>=2.7->matplotlib>=3.0.0->mlxtend) (1.16.0)\n",
-      "Downloading mlxtend-0.23.1-py3-none-any.whl (1.4 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m1.4/1.4 MB\u001b[0m \u001b[31m7.0 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m:00:01\u001b[0m00:01\u001b[0m\n",
-      "\u001b[?25hInstalling collected packages: mlxtend\n",
-      "Successfully installed mlxtend-0.23.1\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "!pip install mlxtend\n",
-    "\n",
     "import matplotlib.pyplot as plt\n",
     "from mlxtend.plotting import plot_decision_regions\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import seaborn as sns\n",
-    "\n"
+    "import seaborn as sns"
    ]
   },
   {
@@ -254,37 +219,49 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***\n",
+    "Implement the single neuron model for logistic regression. \n",
+    "***"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "class SingleNeuron(object):\n",
+    "    # Initialize the class objects.\n",
     "    def __init__(self, activation_function, cost_function):\n",
     "        self.activation_function = activation_function\n",
     "        self.cost_function = cost_function\n",
     "\n",
+    "    # Train the model. \n",
     "    def train(self, X, y, alpha = 0.005, epochs = 50):\n",
-    "   \n",
     "        self.w_ = np.random.rand(1 + X.shape[1])\n",
     "        self.errors_ = []\n",
     "        N = X.shape[0]\n",
     "\n",
+    "        #Iterate through the epochs.\n",
     "        for _ in range(epochs):\n",
     "            errors = 0\n",
     "            for xi, target in zip(X, y):\n",
     "                error = (self.predict(xi) - target)\n",
     "                self.w_[:-1] -= alpha*error*xi\n",
     "                self.w_[-1] -= alpha*error\n",
-    "                #errors += .5*((self.predict(xi) - target)**2)\n",
     "                errors += self.cost_function(self.predict(xi), target)\n",
     "            self.errors_.append(errors/N)\n",
     "        return self\n",
     "\n",
+    "    # Predict the output.\n",
     "    def predict(self, X):\n",
     "        preactivation = np.dot(X, self.w_[:-1]) + self.w_[-1]\n",
     "        return self.activation_function(preactivation)\n",
     "\n",
+    "    # Plot the cost function.\n",
     "    def plot_cost_function(self):\n",
     "        fig, axs = plt.subplots(figsize = (10, 8))\n",
     "        axs.plot(range(1, len(self.errors_) + 1), \n",
@@ -296,13 +273,28 @@
     "        axs.set_title(\"Cost Calculated after Epoch During Training\", fontsize = 18)\n",
     "        plt.show()\n",
     "\n",
+    "    # Plot the decision boundary.\n",
     "    def plot_decision_boundary(self, X, y, xstring=\"x\", ystring=\"y\"):\n",
     "        plt.figure(figsize = (10, 8))\n",
     "        plot_decision_regions(X, y, clf = self)\n",
     "        plt.title(\"Neuron Decision Boundary\", fontsize = 18)\n",
     "        plt.xlabel(xstring, fontsize = 15)\n",
     "        plt.ylabel(ystring, fontsize = 15)\n",
-    "        plt.show()"
+    "        plt.show()\n",
+    "\n",
+    "def sigmoid(z):\n",
+    "    return 1.0/(1.0 + np.exp(-z))\n",
+    "\n",
+    "def cross_entropy_loss(y_hat, y):\n",
+    "    return - y*np.log(y_hat) - (1 - y)*np.log(1 - y_hat)\n",
+    "\n",
+    "node = SingleNeuron(sigmoid, cross_entropy_loss)\n",
+    "\n",
+    "X = df.iloc[50:].petal_length.values\n",
+    "X = X.reshape(-1, 1)\n",
+    "y = np.where(df.iloc[50:].species == \"versicolor\", 0, 1)\n",
+    "\n",
+    "node.train(X, y, alpha = 0.01, epochs = 10_000)"
    ]
   }
  ],
