Final Linear Regression

--- a/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
+++ b/1. Supervised Learning/1.1. The Perceptron Algorithm/perceptron.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "- [Numpy](https://numpy.org/doc/)\n",
     "\n",
-    "- [Seaborn](https://seaborn.pydata.org/)"
+    "- [Seaborn](https://seaborn.pydata.org/)\n",
+    "\n",
+    "- [SciKit Learn](https://scikit-learn.org/stable/)"
    ]
   },
   {
